Separate gravity pair calculations and new initial barnes-hut tree construction code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(nbody LANGUAGES CXX)
 set(SOURCE_FILES
     src/main.cpp
     src/particle.cpp
-    src/barnesHut.cpp
+    src/BHTree.cpp
 )
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
